--- a/workshops-tutorials.html
+++ b/workshops-tutorials.html
@@ -23,12 +23,11 @@
                 <div class="mbr-navbar__column">
                   <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links">
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="index.html">HOME</a></li>
-                    <li class="mbr-navbar__item dropdown">
-                      <a class="mbr-buttons__link btn text-black dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false" aria-haspopup="true">CURSOS <span class="caret"></span></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="clases.html">ACÚSTICA MUSICAL</a></li>
-                        <li><a href="#">OTROS</a></li>
-                      </ul>
+                    <li class="mbr-navbar__item">
+                      <a class="mbr-buttons__link btn text-black" href="clases.html">ACÚSTICA MUSICAL</a>
+                    </li>
+                    <li class="mbr-navbar__item">
+                      <a class="mbr-buttons__link btn text-black" href="#">OTROS</a>
                     </li>
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="publications.html">PUBLICATIONS</a></li>
                     <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="teaching.html">TEACHING</a></li>
