--- a/consonancias-disonancias-escalas.html
+++ b/consonancias-disonancias-escalas.html
@@ -26,12 +26,11 @@
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-black" href="index.html">HOME</a>
                     </li>
-                    <li class="mbr-navbar__item dropdown">
-                      <a class="mbr-buttons__link btn text-black dropdown-toggle" data-toggle="dropdown" href="#" aria-expanded="false" aria-haspopup="true">CURSOS <span class="caret"></span></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="clases.html">ACÚSTICA MUSICAL</a></li>
-                        <li><a href="#">OTROS</a></li>
-                      </ul>
+                    <li class="mbr-navbar__item">
+                      <a class="mbr-buttons__link btn text-black" href="clases.html">ACÚSTICA MUSICAL</a>
+                    </li>
+                    <li class="mbr-navbar__item">
+                      <a class="mbr-buttons__link btn text-black" href="#">OTROS</a>
                     </li>
                     <li class="mbr-navbar__item">
                       <a class="mbr-buttons__link btn text-black" href="publications.html">PUBLICATIONS</a>
