--- a/clases.html
+++ b/clases.html
@@ -132,15 +132,15 @@
               </div>
               <div class="mbr-section__container mbr-section__container--middle">
                 <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
-                  <p>Resumen breve de la clase. Contenido en preparación.</p>
+                  <p>Se describe brevemente el movimiento armónico simple, sus características y aplicaciones en acústica musical.</p>
                 </div>
               </div>
               <div class="mbr-section__container">
                 <div class="mbr-buttons mbr-buttons--auto-align btn-inverse">
                   <a class="mbr-buttons__btn btn btn-lg btn-default" href="movimiento-armonico-simple.html">LEER MÁS</a>
                   <a class="mbr-buttons__btn btn btn-lg btn-default" href="https://www.youtube.com" target="_blank">VIDEO</a>
-                  <a class="mbr-buttons__btn btn btn-lg btn-default" href="#">MATERIALES</a>
-                  <a class="mbr-buttons__btn btn btn-lg btn-default" href="#">GUIA DE LECTURA</a>
+                  <a class="mbr-buttons__btn btn btn-lg btn-default" href="https://drive.google.com/file/d/1k2nrUe5N0Pkik-qgr_iTt9yF0QU1oPUf/view?usp=sharing">MATERIALES</a>
+                  <a class="mbr-buttons__btn btn btn-lg btn-default" href="https://drive.google.com/file/d/1_TKYay6tAJB3vf1IjC7JxXkoGWqXA7NK/view?usp=sharing">GUIA DE LECTURA</a>
                   <a class="mbr-buttons__btn btn btn-lg btn-default" href="trabajo-practico-movimiento-armonico.html">TRABAJO PRÁCTICO</a>
                 </div>
               </div>
