--- a/movimiento-armonico-simple.html
+++ b/movimiento-armonico-simple.html
@@ -136,31 +136,30 @@
     <section class="mbr-section mbr-section--relative" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 60px;">
       <div class="mbr-section__container container">
         <div class="row">
-          <div class="mbr-box mbr-box--fixed mbr-box--adapted">
-            <div class="mbr-box__magnet mbr-class-mbr-box__magnet--center-left col-sm-6 content-size mbr-section__left">
-              <div class="mbr-section__container mbr-section__container--middle">
-                <div class="mbr-header mbr-header--auto-align mbr-header--wysiwyg">
-                  <h3 class="mbr-header__text">MAS en Acústica</h3>
-                </div>
+          <div class="col-sm-12" style="display: flex; flex-direction: column; align-items: center;">
+            <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width" style="max-width: 1000px; width: 100%;">
+              <img src="images/mas_3.png" class="mbr-figure__img clickable-image" alt="MAS en acústica" style="width: 100%; height: auto;">
+            </figure>
+            <div class="mbr-section__container mbr-section__container--middle" style="width: 100%; max-width: 800px;">
+              <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
+                <p>
+                  A partir de lo que vimos, podemos determinar las características de una señal sinusoidal a partir de sus partes.
+                </p>
+                <ul>
+                  <li><b>Tiempo (s):</b> Representa el eje horizontal de la señal sinusoidal (llamado eje X) y Se mide en segundos.</li>
+                  <li><b>Ciclo:</b> hace referencia a una repetición completa de la señal sinusoidal (por ejemplo, de 0 a 0).</li>
+                  <li><b>Período (T):</b> Es el tiempo que tarda una señal en completar un ciclo. Se mide en segundos (s).</li>
+                  <li><b>Frecuencia (f):</b> Es el número de ciclos por segundo. Se mide en Hertz (Hz). Por ejemplo: 100 Hz significa 100 ciclos en 1 segundo.</li>
+                </ul>
+                <p>
+                  De esta forma podemos calcular:
+                </p>
+                <ul>
+                  <li>f=1/P ([Hz] = 1/[s])</li>
+                  <li>P=1/f ([s]=1/[Hz])</li>
+                  <li>Pxf=1 ([s]x[Hz]=1)</li>
+                </ul>
               </div>
-              <div class="mbr-section__container mbr-section__container--middle">
-                <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg">
-                  <p>
-                    En acústica, el MAS es fundamental para entender la generación de ondas sonoras:
-                  </p>
-                  <ul>
-                    <li><b>Fuentes Vibrantes:</b> Cuerdas, membranas y columnas de aire oscilan en MAS.</li>
-                    <li><b>Presión Sonora:</b> Las variaciones de presión en una onda sonora siguen patrones de MAS.</li>
-                    <li><b>Superposición:</b> Múltiples MAS pueden superponerse, creando patrones complejos.</li>
-                    <li><b>Resonancia:</b> Los sistemas responden máximamente cuando se excitan a su frecuencia natural.</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__right col-sm-6 image-size" style="width: 50%; padding-left: 30px;">
-              <figure class="mbr-figure mbr-figure--adapted mbr-figure--caption-inside-bottom mbr-figure--full-width">
-                <img src="images/placeholder.svg" class="mbr-figure__img clickable-image" alt="MAS en acústica">
-              </figure>
             </div>
           </div>
         </div>
